Changes in styles, footer.css and layout,css

--- a/trabajo-integrador/src/styles/Layout.css
+++ b/trabajo-integrador/src/styles/Layout.css
@@ -14,3 +14,13 @@ body {
     flex: 1;
     padding: 20px;
 }
+
+.layout {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.content {
+    flex: 1;
+}
